# zm-mux

./: .claudeignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json  settings.local.json
.claude/agents/: build-checker.md  code-reviewer.md  doc-researcher.md  doc-updater.md
.claude/hooks/: mistake-guard.sh  notify-done.sh  post-compact.sh  post-failure.sh  post-review.sh  pre-compact.sh  prompt-context.sh  session-start.sh
.claude/memory/: MEMORY.md  policy-registry.md  troubleshooting-patterns.md
.claude/rules/: known-mistakes.md  security.md
.claude/skills/zm-changelog/: SKILL.md
.claude/skills/zm-docs/: SKILL.md
.claude/skills/zm-memory-save/: SKILL.md
.claude/skills/zm-troubleshoot/: SKILL.md
.claude/skills/zm-work-intake/: SKILL.md
.github/workflows/: ci.yml  release.yml
crates/zm-agent/: Cargo.toml
crates/zm-agent/src/: lib.rs  worktree.rs
crates/zm-app/: Cargo.toml
crates/zm-app/src/: main.rs  notify.rs  selection.rs
crates/zm-core/: Cargo.toml
crates/zm-core/src/: config.rs  keybinding.rs  lib.rs
crates/zm-mux/: Cargo.toml
crates/zm-mux-mcp/: Cargo.toml
crates/zm-mux-mcp/src/: main.rs
crates/zm-mux/src/: lib.rs  session.rs  tabs.rs
crates/zm-pty/: Cargo.toml
crates/zm-pty/src/: lib.rs
crates/zm-render/: Cargo.toml
crates/zm-render/src/: cpu.rs  gpu.rs  gpu_rect.rs  lib.rs
crates/zm-socket/: Cargo.toml
crates/zm-socket/examples/: mock_client.rs
crates/zm-socket/src/: lib.rs  transport_sync.rs
crates/zm-socket/src/mux_api/: mod.rs  types.rs
crates/zm-socket/src/rpc/: handler_min.rs  mod.rs  types.rs
crates/zm-socket/tests/: mux_api_roundtrip.rs  rpc_roundtrip.rs  transport_roundtrip.rs
crates/zm-socket/tests/snapshots/: rpc_roundtrip__capture_request.snap  rpc_roundtrip__capture_response_success.snap  rpc_roundtrip__context_exited_notification.snap  rpc_roundtrip__initialize_request.snap  rpc_roundtrip__initialize_response_success.snap  rpc_roundtrip__kill_request.snap  rpc_roundtrip__list_request.snap  rpc_roundtrip__list_response_success.snap  rpc_roundtrip__response_error_invalid_params.snap  rpc_roundtrip__response_error_method_not_found.snap  rpc_roundtrip__spawn_agent_request_full.snap  rpc_roundtrip__spawn_agent_request_minimal.snap  rpc_roundtrip__spawn_agent_response_success.snap  rpc_roundtrip__write_request.snap
crates/zm-term/: Cargo.toml
crates/zm-term/src/: lib.rs
docs/: 01-windows-claude-code-issues.md  02-cmux-overview.md  03-tmux-vs-cmux.md  04-wmux-existing-projects.md  05-windows-terminal-comparison.md  06-cross-platform-terminal-survey.md  07-claude-codex-dynamic-duo.md  08-multi-agent-collaboration.md  09-feasibility-analysis.md  10-critical-risks-update.md  11-implementation-roadmap.md  12-istty-workaround.md  13-custompanebackend-track.md  14-26572-advocacy-draft.md  README.md
