[package]
name = "zm-agent"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AI agent detection, tmux compat, and agent lifecycle"

[dependencies]
zm-core = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = "3"
