[package]
name = "zm-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "zm-mux application entry point"

[dependencies]
zm-core = { workspace = true }
zm-pty = { workspace = true }
zm-term = { workspace = true }
zm-render = { workspace = true }
zm-mux = { workspace = true }
zm-agent = { workspace = true }
zm-socket = { workspace = true }
serde_json = { workspace = true }
winit = { workspace = true }
notify-rust = "4"
arboard = { workspace = true }
