[package]
name = "zm-mux-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "MCP server bridge for zm-mux — exposes terminal multiplexer to AI tools"

[[bin]]
name = "zm-mux-mcp"
path = "src/main.rs"

[dependencies]
zm-socket = { workspace = true }
rmcp = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
