[package]
name = "zm-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU/CPU rendering for zm-mux (glyphon + wgpu + softbuffer)"

[dependencies]
zm-core = { path = "../zm-core" }
zm-term = { path = "../zm-term" }
softbuffer = "0.4"
cosmic-text = "0.19"
winit = "0.30"
