[package]
name = "zm-render"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GPU/CPU rendering for zm-mux (glyphon + wgpu + softbuffer)"

[dependencies]
zm-core = { workspace = true }
zm-term = { workspace = true }
softbuffer = { workspace = true }
cosmic-text = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
glyphon = { workspace = true }
pollster = { workspace = true }
