[package]
name = "zm-socket"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Socket API, MCP server, and CustomPaneBackend"

[dependencies]
zm-core = { path = "../zm-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
interprocess = "2"

[dev-dependencies]
insta = { version = "1", features = ["json"] }
