[package]
name = "zm-socket"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Socket API, MCP server, and CustomPaneBackend"

[dependencies]
zm-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
interprocess = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
