[package]
name = "zm-term"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "VT terminal emulation for zm-mux, wrapping alacritty_terminal"

[dependencies]
zm-core = { workspace = true }
alacritty_terminal = { workspace = true }
vte = { workspace = true }
regex = { workspace = true }
